--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 </head>
 <body>
     <div class="wrap">
-        <header id="header">
-            <div class="mopen">
+        <header id="header">           
+            <a href="/" class="pro_btn">
+                <img src="./img/favicon.png" alt="">
+            </a>
+            <div class="mopen cover_menu">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-            <a href="/" class="pro_btn">
-                <img src="./img/favicon.png" alt="">
-            </a>
-            <div class="content">
+            <div class="content cover">
                 <div class="con_top">
                     <a href="#main">Main</a>
                 </div>
