--- a/index.html
+++ b/index.html
@@ -28,50 +28,46 @@
 </head>
 <body>
     <div class="wrap">
+        <!-- header 시작 -->
         <header id="header">           
             <a href="/" class="pro_btn">
                 <img src="./img/favicon.png" alt="">
             </a>
-            <div class="mopen cover_menu">
+            <div class="menu_ic¬øon">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-            <div class="content cover">
+            <div class="cover">
                 <div class="con_top">
                     <a href="#main">Main</a>
+                    <a href="#about">About</a>
                 </div>
                 <div class="con_center">
                     <ul class="menu01">
-                        <li><a href="#project01">
+                        <li>
+                            <a href="#project01">
                                 <span class="con_num">Project 01</span>
-                                <span class="con_title">Grove Store</span>
-                            </a></li>
-                        <li><a href="#project02">
+                                <span class="con_title">JavaScript</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#project02">
                                 <span class="con_num">Project 02</span>
-                                <span class="con_title">Audi Korea</span>
-                            </a></li>
-                        <li><a href="#project03">
+                                <span class="con_title">React</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#project03">
                                 <span class="con_num">Project 03</span>
-                                <span class="con_title">Nars Cosmetic</span>
-                            </a></li>
-                        <li><a href="#project04">
-                                <span class="con_num">Project 04</span>
-                                <span class="con_title">RECTO</span>
-                            </a></li>
-                        <li><a href="#project05">
-                                <span class="con_num">Project 05</span>
-                                <span class="con_title">University</span>
-                            </a></li>
-                        <li><a href="#project06">
-                                <span class="con_num">Project 06</span>
-                                <span class="con_title">Hospital</span>
-                            </a></li>
+                                <span class="con_title">Script</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="con_bottom">
-                    <a href="#profile">Profile</a>
+                    <a href="#contact">Contact</a>
                 </div>
             </div>
             <nav class="gnb">
@@ -101,6 +97,141 @@
                     </a>
             </nav>
         </header>
+        <!-- header 끝 -->
+        <main>
+            <div id="fullpage">
+                <div class="main" class="section">
+                    <div class="box">
+                        <h2>FORNT-END DEVELOPER</h2>
+                        <h1>PORTFOLIO</h1>
+                        <span>Shin Hwayeong</h1>
+                    </div>
+                </div>
+                <div class="about" class="section">
+                    <div class="box">
+                        <div class="about_txt">
+                            <div class="introduce"></div>
+                            <div class="skills">
+                                <ul>
+                                    <li>
+                                        <img src="" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="" alt="">
+                                    </li>
+                                    <li>
+                                        <img src="" alt="">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="about_pic">
+                            <img src="" alt="id_photo">
+                        </div>
+                    </div>
+                </div>                
+                <div id="js_pf" class="section">
+                    <div class="cover">
+                        <div class="bx_left">
+                            <h2>Javascript Project</h2>
+                            <div class="info_bx">
+                                <dl>
+                                    <div class="keyword">
+                                        <span class="keywd ky01">responsive</span>
+                                        <span class="keywd ky02">sub pages</span>
+                                    </div>
+                                    <dt>Project</dt>
+                                    <dd>JACKSON CHAMELEONF</dd>
+                                    <dd class="dd_info">심플하고 트렌디한 브랜드특성을 반영해 볼드한폰트와 무채색 컬러를 사용했으며<br>
+                                        상품들이 돋보이도록 tab menu와 slick slide를 활용해 제작했습니다.
+                                    </dd>
+                                    <dt>Type</dt>
+                                    <dd>반응형 웹</dd>
+                                    <dt>Tool</dt>
+                                    <dd>HTML5/CSS3/JAVASCRIPT(jQuery)/Slick slider</dd>
+                                    <dt>Color</dt>
+                                    <dd>
+                                        <span class="color co01"></span>
+                                        <span class="color co02"></span>
+                                        <span class="color co03"></span>
+                                        <span class="color co04"></span>
+                                    </dd>
+                                    <dt>Font</dt>
+                                    <dd>Noto Sans KR</dd>
+                                    <dt>Work</dt>
+                                    <dd>개인작업 100%</dd>
+                                </dl>
+                            </div>
+                        </div>
+                        <div class="bx_right">
+                            <div class="page_num">
+                                <span class="pg"></span>/6
+                            </div>
+                            <div class="mock">
+                                <div class="pc">
+                                    <figure class="pc_cover">
+                                        <img src="./img/pf01_webpage.jpg" alt="">
+                                    </figure>
+                                </div>
+                                <div class="mobile">
+                                    <figure class="mo_cover">
+                                        <img class="m_img" src="./img/pf01_mobile.jpg" alt="">
+                                        <img class="mo_top" src="./img/mo_top.png" alt="">
+                                    </figure>
+                                </div>
+                            </div>
+                            <div class="btn">
+                                <a href="https://ejin0517.github.io/pf08/index.html" target="blank">VIEW
+                                    WEBPAGE</a>
+                                <a href="./img/style_pf01.jpg" target="blank">STYLE GUIDE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+        </main>
+
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- <div class="main"></div>
         <section class="introduce"></section>
         <section class="portfolio_js"></section>
