--- a/index.html
+++ b/index.html
@@ -125,37 +125,195 @@
                     <div class="cover">
                         <div class="inner">
                             <div class="js_slider">
-                                <div class="slide slede01">
-                                    <div class="left">설명적는곳</div>
-                                    <div class="right">그림넣는곳</div>
+                                <div class="js_slide slide01">
+                                    <div class="left">
+                                        <strong>PROJECT</strong>
+                                        <div class="txt_row">
+                                            <dl>
+                                                <dt>Type</dt>
+                                                <dd>반응형 웹디자인</dd>
+                                                <dt>Tool</dt>
+                                                <dd>HTML5, CSS3, JS</dd>
+                                                <dt>Font</dt>
+                                                <dd>Limelight, Noto Sans KR</dd>
+                                                <dt>Color</dt>
+                                                <dd>
+                                                    <span class="color c05"></span>
+                                                    <span class="color c06"></span>
+                                                    <span class="color c07"></span>
+                                                    <span class="color c08"></span>
+                                                </dd>    
+                                                <dt>Work</dt>
+                                                <dd>개인작업 100%</dd>
+                                            </dl>
+                                        </div>   
+                                    </div>
+                                    <div class="right">
+                                        <div class="mockup">
+                                            <div class="pc">
+                                                <div class="pc_cover">
+                                                    <img src="./img/fullpage01.png" alt="pc_mockup" />
+                                                </div>
+                                            </div>
+                                            <div class="mobile">
+                                                <div class= "mobile_cover">
+                                                    <img class="mo_top" src="./img/mobile_top.png" alt="mobile_top" />
+                                                    <img class="mo_web" src="./img/m_fullpage01.png" alt="fullpage_pic" />
+                                                </div>
+                                            </div> 
+                                        </div>
+                                    </div>
+                                </div>                                
+                                <div class="js_slide slide02">
+                                    <div class="left">
+                                        <strong>PROJECT</strong>
+                                        <div class="txt_row">
+                                            <dl>
+                                                <dt>Type</dt>
+                                                <dd>반응형 웹디자인</dd>
+                                                <dt>Tool</dt>
+                                                <dd>HTML5, CSS3, JS</dd>
+                                                <dt>Font</dt>
+                                                <dd>Limelight, Noto Sans KR</dd>
+                                                <dt>Color</dt>
+                                                <dd>
+                                                    <span class="color c05"></span>
+                                                    <span class="color c06"></span>
+                                                    <span class="color c07"></span>
+                                                    <span class="color c08"></span>
+                                                </dd>    
+                                                <dt>Work</dt>
+                                                <dd>개인작업 100%</dd>
+                                            </dl>
+                                        </div>   
+                                    </div>
+                                    <div class="right">
+                                        <div class="mockup">
+                                            <div class="pc">
+                                                <div class="pc_cover">
+                                                    <img src="./img/fullpage02.png" alt="pc_mockup" />
+                                                </div>
+                                            </div>
+                                            <div class="mobile">
+                                                <div class= "mobile_cover">
+                                                    <img class="mo_top" src="./img/mobile_top.png" alt="mobile_top" />
+                                                    <img class="mo_web" src="./img/m_fullpage02.png" alt="fullpage_pic" />
+                                                </div>
+                                            </div> 
+                                        </div>
+                                    </div>
+                                </div>                                
+                                <div class="js_slide slide03">
+                                    <div class="left">
+                                        <strong>PROJECT</strong>
+                                        <div class="txt_row">
+                                            <dl>
+                                                <dt>Type</dt>
+                                                <dd>반응형 웹디자인</dd>
+                                                <dt>Tool</dt>
+                                                <dd>HTML5, CSS3, JS</dd>
+                                                <dt>Font</dt>
+                                                <dd>Limelight, Noto Sans KR</dd>
+                                                <dt>Color</dt>
+                                                <dd>
+                                                    <span class="color c05"></span>
+                                                    <span class="color c06"></span>
+                                                    <span class="color c07"></span>
+                                                    <span class="color c08"></span>
+                                                </dd>    
+                                                <dt>Work</dt>
+                                                <dd>개인작업 100%</dd>
+                                            </dl>
+                                        </div>   
+                                    </div>
+                                    <div class="right">
+                                        <div class="mockup">
+                                            <div class="pc">
+                                                <div class="pc_cover">
+                                                    <img src="./img/fullpage03.png" alt="pc_mockup" />
+                                                </div>
+                                            </div>
+                                            <div class="mobile">
+                                                <div class= "mobile_cover">
+                                                    <img class="mo_top" src="./img/mobile_top.png" alt="mobile_top" />
+                                                    <img class="mo_web" src="./img/m_fullpage03.png" alt="fullpage_pic" />
+                                                </div>
+                                            </div> 
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="slide slede02">
-                                    <div class="left">설명적는곳1</div>
-                                    <div class="right">그림넣는곳1</div>
+                                <div class="js_slide slide04">
+                                    <div class="left">
+                                        <strong>PROJECT</strong>
+                                        <div class="txt_row">
+                                            <dl>
+                                                <dt>Type</dt>
+                                                <dd>반응형 웹디자인</dd>
+                                                <dt>Tool</dt>
+                                                <dd>HTML5, CSS3, JS</dd>
+                                                <dt>Font</dt>
+                                                <dd>Limelight, Noto Sans KR</dd>
+                                                <dt>Color</dt>
+                                                <dd>
+                                                    <span class="color c05"></span>
+                                                    <span class="color c06"></span>
+                                                    <span class="color c07"></span>
+                                                    <span class="color c08"></span>
+                                                </dd>    
+                                                <dt>Work</dt>
+                                                <dd>개인작업 100%</dd>
+                                            </dl>
+                                        </div>   
+                                    </div>
+                                    <div class="right">
+                                        <div class="mockup">
+                                            <div class="pc">
+                                                <div class="pc_cover">
+                                                    <img src="./img/fullpage04.png" alt="pc_mockup" />
+                                                </div>
+                                            </div>
+                                            <div class="mobile">
+                                                <div class= "mobile_cover">
+                                                    <img class="mo_top" src="./img/mobile_top.png" alt="mobile_top" />
+                                                    <img class="mo_web" src="./img/m_fullpage04.png" alt="fullpage_pic" />
+                                                </div>
+                                            </div> 
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="slide slede03">
-                                    <div class="left">설명적는곳4</div>
-                                    <div class="right">그림넣는곳4</div>
+                            </div>                              
+                        </div>
+                <!--  </div><div class="js_pf section">
+                    <div class="cover">
+                        <div class="inner">
+                            <div class="pp_txt pp_txt03 pp_txt01">
+                                <strong>PROJECT</strong>
+                                <div class="txt_row">
+                                    <dl>
+                                        <dt>Type</dt>
+                                        <dd>반응형 웹디자인</dd>
+                                        <dt>Tool</dt>
+                                        <dd>HTML5, CSS3, JS</dd>
+                                        <dt>Font</dt>
+                                        <dd>Limelight, Noto Sans KR</dd>
+                                        <dt>Color</dt>
+                                        <dd>
+                                            <span class="color c05"></span>
+                                            <span class="color c06"></span>
+                                            <span class="color c07"></span>
+                                            <span class="color c08"></span>
+                                        </dd>    
+                                        <dt>Work</dt>
+                                        <dd>개인작업 100%</dd>
+                                    </dl>
+                                </div>                      
+                                <div class="btn b02">
+                                    <a href="https://haammy.github.io/pf05" target="blank">WebPage</a>
+                                    <a href="./img/design02.png" target="blank">StyleGuide</a>
                                 </div>
-                                <div class="slide slede04">
-                                    <div class="left">설명적는곳7</div>
-                                    <div class="right">그림넣는곳5</div>
-                                </div>
-                                <div class="slide slede05">
-                                    <div class="left">설명적는곳2</div>
-                                    <div class="right">그림넣는곳4</div>
-                                </div>
-                                <div class="slide slede06">
-                                    <div class="left">설명적는곳8</div>
-                                    <div class="right">그림넣는곳9</div>
-                                </div>
-                            </div>
-                            <div class="jsArrow">
-                                <i class="xi-angle-left"></i>
-                                <i class="xi-angle-right"></i>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                         <!-- <div class="left_page">
                             <h2>Javascript Project</h2>
                             <div class="info_bx">
