--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                 <a href="#project06">06
                     <div class="tab tab07"></div>
                 </a>
-                <a href="#project06">07
+                <a href="#project07">07
                     <div class="tab tab08"></div>
                 </a>
-                <a href="#project06">08
+                <a href="#project08">08
                     <div class="tab tab09"></div>
                 </a>
                 <a href="#about">contact
@@ -468,15 +468,15 @@
                                 <div class="mock">
                                     <div class="pc">
                                         <figure class="pcCover">
-                                            <img src="./img/fullpage01.png" alt="">
+                                            <img src="./img/pc06_ananticove.png" alt="">
                                         </figure>
-                                    </div>
+                                    </div><!-- 
                                     <div class="mobile">
                                         <figure class="moCover">
                                             <img class="mImg" src="./img/m_fullpage01.png" alt="">
                                             <img class="moTop" src="./img/mobile_top.png" alt="">
                                         </figure>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="btn">
                                     <a href="https://ejin0517.github.io/pf08/index.html" target="blank">VIEW
@@ -530,18 +530,12 @@
                                 <div class="mock">
                                     <div class="pc">
                                         <figure class="pcCover">
-                                            <img src="./img/fullpage01.png" alt="">
-                                        </figure>
-                                    </div>
-                                    <div class="mobile">
-                                        <figure class="moCover">
-                                            <img class="mImg" src="./img/m_fullpage01.png" alt="">
-                                            <img class="moTop" src="./img/mobile_top.png" alt="">
+                                            <img src="./img/pc07_kakaobank.png" alt="">
                                         </figure>
                                     </div>
                                 </div>
                                 <div class="btn">
-                                    <a href="https://ejin0517.github.io/pf08/index.html" target="blank">VIEW
+                                    <a href="https://bbayong28.github.io/practice01_tr/" target="blank">VIEW
                                         WEBPAGE
                                     </a>
                                 </div>
